--- a/01_deploying_the_application/go-demo-8/k8s/health/hpa.yaml
+++ b/01_deploying_the_application/go-demo-8/k8s/health/hpa.yaml
@@ -1,6 +1,4 @@
----
-
-apiVersion: autoscaling/v2beta1
+apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: go-demo-8
@@ -15,8 +13,12 @@ spec:
   - type: Resource
     resource:
       name: cpu
-      targetAverageUtilization: 80
+      target:
+        type: Utilization
+        averageUtilization: 80
   - type: Resource
     resource:
       name: memory
-      targetAverageUtilization: 80
+      target:
+        type: Utilization
+        averageUtilization: 80
