--- a/01_deploying_the_application/go-demo-8/k8s/health/app/hpa-app.yaml
+++ b/01_deploying_the_application/go-demo-8/k8s/health/app/hpa-app.yaml
@@ -1,9 +1,8 @@
----
-
-apiVersion: autoscaling/v2beta1
+apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: go-demo-8
+  namespace: go-demo-8
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
@@ -12,11 +11,15 @@ spec:
   minReplicas: 2
   maxReplicas: 6
   metrics:
-  - type: Resource
-    resource:
-      name: cpu
-      targetAverageUtilization: 80
-  - type: Resource
-    resource:
-      name: memory
-      targetAverageUtilization: 80
+    - type: Resource
+      resource:
+        name: cpu
+        target:
+          type: Utilization
+          averageUtilization: 80
+    - type: Resource
+      resource:
+        name: memory
+        target:
+          type: Utilization
+          averageUtilization: 80
